# ml-project-template

./: Dockerfile  README.md  pyproject.toml
