[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["ryonsd <ryo.nishida.24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.3"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
optuna = "^3.1.1"
omegaconf = "^2.3.0"
jinja2 = "^3.1.2"
torch = {url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp311-cp311-linux_x86_64.whl"}
notebook = "^6.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
